Se cambia el slider de las imagenes de cada receta

--- a/misRecetas/arroz-habichuelas.html
+++ b/misRecetas/arroz-habichuelas.html
@@ -50,10 +50,10 @@
                         <img src="../images/arroz-habichuelas/arroz-habichuelas8.png" alt="Arroz con habichuelas">
                     </div>
                 </div>
-                <div class="controls">
+                <!-- <div class="controls">
                     <button id="prev">←</button>
                     <button id="next">→</button>
-                </div>
+                </div> -->
 
                 <h3>Descripción</h3>
                 <p>
