--- a/misRecetas/cazuela-costilla.html
+++ b/misRecetas/cazuela-costilla.html
@@ -55,10 +55,10 @@
                         <img src="../images/cazuela-patatas-costilla/cazuela-patatas-costilla-18.jpg" alt="Cazuela de patatas con costilla">
                     </div>
                 </div>
-                <div class="controls">
+                <!-- <div class="controls">
                     <button id="prev">←</button>
                     <button id="next">→</button>
-                </div>
+                </div> -->
 
 
                 <h3>Descripción</h3>
