--- a/misRecetas/emblanco.html
+++ b/misRecetas/emblanco.html
@@ -46,10 +46,10 @@
                         <img src="../images/emblanco/emblanco4.jpg" alt="En blanco">
                     </div>
                 </div>
-                <div class="controls">
+                <!-- <div class="controls">
                     <button id="prev">←</button>
                     <button id="next">→</button>
-                </div>
+                </div> -->
 
 
                 <h3>Descripción</h3>
