--- a/misRecetas/lentejas.html
+++ b/misRecetas/lentejas.html
@@ -46,10 +46,10 @@
                         <img src="../images/lentejas/lentejas5.jpg" alt="Lentejas">
                     </div>
                 </div>
-                <div class="controls">
+                <!-- <div class="controls">
                     <button id="prev">←</button>
                     <button id="next">→</button>
-                </div>
+                </div> -->
 
                 <h3>Descripción</h3>
                 <p>Las lentejas son una excelente fuente de nutrientes esenciales. 
