--- a/misRecetas/pure-verduras.html
+++ b/misRecetas/pure-verduras.html
@@ -47,10 +47,10 @@
                         <img src="../images/pure-verduras/pure6.jpg" alt="Puré de verduras">
                     </div>
                 </div>
-                <div class="controls">
+                <!-- <div class="controls">
                     <button id="prev">←</button>
                     <button id="next">→</button>
-                </div>
+                </div> -->
 
                 <h3>Descripción</h3>
                 <p>Las verduras se convierten en una interesante fuente de vitaminas y nutrientes. Es por ello por lo que su consumo supone un refuerzo para el sistema inmunológico.</p>
