--- a/misRecetas/sopa_caldo_encima.html
+++ b/misRecetas/sopa_caldo_encima.html
@@ -100,10 +100,10 @@
                         <img src="../images/sopa-caldo-encima/sopa-caldo-encima7.jpg" alt="Sopa caldo por encima">
                     </div>
                 </div>
-                <div class="controls">
+                <!-- <div class="controls">
                     <button id="prev">←</button>
                     <button id="next">→</button>
-                </div>
+                </div> -->
 
                 <h3>Descripción</h3>
                 <p>Es un plato tradicional de la provincia de Málaga que tiene distintas variantes y reciben distintos nombres según el pueblo donde se haga.
