--- a/misRecetas/cazuela-pollo.html
+++ b/misRecetas/cazuela-pollo.html
@@ -36,7 +36,14 @@
         <div class="pasos">
             <div>
                 <h2>Cazuela de patatas (con pollo)</h2>
-                <img src="../images/cazuela-pollo.png" alt="Cazuela de patatas con pollo" width="65%">
+                
+                <!-- Carrusel imágenes -->
+                <div class="slider">
+                    <div class="slider--inner">
+                        <img src="../images/cazuela-pollo.png" alt="Cazuela de patatas con pollo">
+                    </div>
+                </div>
+
                 <h3>Descripción</h3>
                 <p>Esta cazuela de patatas con pollo es un plato completo, sabroso y nutritivo.</p>
                 <p>El pollo aporta proteínas magras de alta calidad, mientras que las patatas y zanahorias ofrecen energía, fibra y vitaminas como la A, B6 y C.</p>
