--- a/misRecetas/habichuelas.html
+++ b/misRecetas/habichuelas.html
@@ -47,10 +47,10 @@
                         <img src="../images/habichuelas/habichuelas4.jpg" alt="Fabada o habichuelas">
                     </div>
                 </div>
-                <div class="controls">
+                <!-- <div class="controls">
                     <button id="prev">←</button>
                     <button id="next">→</button>
-                </div>
+                </div> -->
 
                 <h3>Descripción</h3>
                 <p>
