--- a/misRecetas/magro-tomates.html
+++ b/misRecetas/magro-tomates.html
@@ -51,10 +51,10 @@
                         <img src="../images/magro-tomates/magro-tomates9.jpg" alt="Magro con tomates">
                     </div>
                 </div>
-                <div class="controls">
+                <!-- <div class="controls">
                     <button id="prev">←</button>
                     <button id="next">→</button>
-                </div>
+                </div> -->
 
                 <h3>Descripción</h3>
                 <p>
