--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" sizes="32x32" href="./images/chef-hat.png">
     <title>Recetas con Sabor</title>
-    <link rel="stylesheet" href="./css/style.css?v=2">
-    <link rel="stylesheet" href="./css/hamburger.css?v=2">
+    <link rel="stylesheet" href="./css/style.css?v=3">
+    <link rel="stylesheet" href="./css/hamburger.css?v=3">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script>
         setTimeout(() => {
@@ -167,6 +167,6 @@
     </footer>
     
     <!-- JavaScript -->
-    <script src="js/myScript.js"></script>
+    <script src="js/myScript.js?v=3"></script>
 </body>
 </html>
