Se añade tira de miniaturas para carrusel de imagenes

--- a/misRecetas/arroz-habichuelas.html
+++ b/misRecetas/arroz-habichuelas.html
@@ -50,10 +50,18 @@
                         <img src="../images/arroz-habichuelas/arroz-habichuelas8.png" alt="Arroz con habichuelas">
                     </div>
                 </div>
-                <!-- <div class="controls">
-                    <button id="prev">←</button>
-                    <button id="next">→</button>
-                </div> -->
+                
+                <!-- Miniaturas -->
+                <div class="thumbs-container">
+                    <img class="thumb" data-index="0" src="../images/arroz-habichuelas/arroz-habichuelas7.png" alt="Arroz con habichuelas">
+                    <img class="thumb" data-index="1" src="../images/arroz-habichuelas/arroz-habichuelas1.jpg" alt="Arroz con habichuelas">
+                    <img class="thumb" data-index="2" src="../images/arroz-habichuelas/arroz-habichuelas2.jpg" alt="Arroz con habichuelas">
+                    <img class="thumb" data-index="3" src="../images/arroz-habichuelas/arroz-habichuelas3.png" alt="Arroz con habichuelas">
+                    <img class="thumb" data-index="4" src="../images/arroz-habichuelas/arroz-habichuelas4.jpg" alt="Arroz con habichuelas">
+                    <img class="thumb" data-index="5" src="../images/arroz-habichuelas/arroz-habichuelas5.jpg" alt="Arroz con habichuelas">
+                    <img class="thumb" data-index="6" src="../images/arroz-habichuelas/arroz-habichuelas6.jpg" alt="Arroz con habichuelas">
+                    <img class="thumb" data-index="7" src="../images/arroz-habichuelas/arroz-habichuelas8.png" alt="Arroz con habichuelas">
+                </div>
 
                 <h3>Descripción</h3>
                 <p>
