--- a/misRecetas/cazuela-arroz.html
+++ b/misRecetas/cazuela-arroz.html
@@ -52,10 +52,21 @@
                         <img src="../images/cazuela-arroz/cazuela-arroz10.jpg" alt="Cazuela de arroz">
                     </div>
                 </div>
-                <!-- <div class="controls">
-                    <button id="prev">←</button>
-                    <button id="next">→</button>
-                </div> -->
+                
+                <!-- Miniaturas -->
+                <div class="thumbs-container">
+                    <img class="thumb" data-index="0" src="../images/cazuela-arroz.jpg" alt="Cazuela de arroz">
+                    <img class="thumb" data-index="1" src="../images/cazuela-arroz/cazuela-arroz1.png" alt="Cazuela de arroz">
+                    <img class="thumb" data-index="2" src="../images/cazuela-arroz/cazuela-arroz2.jpg" alt="Cazuela de arroz">
+                    <img class="thumb" data-index="3" src="../images/cazuela-arroz/cazuela-arroz3.jpg" alt="Cazuela de arroz">
+                    <img class="thumb" data-index="4" src="../images/cazuela-arroz/cazuela-arroz4.jpg" alt="Cazuela de arroz">
+                    <img class="thumb" data-index="5" src="../images/cazuela-arroz/cazuela-arroz5.jpg" alt="Cazuela de arroz">
+                    <img class="thumb" data-index="6" src="../images/cazuela-arroz/cazuela-arroz6.jpg" alt="Cazuela de arroz">
+                    <img class="thumb" data-index="7" src="../images/cazuela-arroz/cazuela-arroz7.jpg" alt="Cazuela de arroz">
+                    <img class="thumb" data-index="8" src="../images/cazuela-arroz/cazuela-arroz8.jpg" alt="Cazuela de arroz">
+                    <img class="thumb" data-index="9" src="../images/cazuela-arroz/cazuela-arroz9.jpg" alt="Cazuela de arroz">
+                    <img class="thumb" data-index="10"src="../images/cazuela-arroz/cazuela-arroz10.jpg" alt="Cazuela de arroz">
+                </div>
                 
                 <h3>Descripción</h3>
                 <p>La cazuela de arroz o arroz caldoso con marisco o conejo es un plato típico de la comarca del Valle del Guadalhorce, se hace también con fideos, muy típico en zonas rurales de Pizarra y Coín.</p>
