--- a/misRecetas/cazuela-costilla.html
+++ b/misRecetas/cazuela-costilla.html
@@ -55,10 +55,22 @@
                         <img src="../images/cazuela-patatas-costilla/cazuela-patatas-costilla-18.jpg" alt="Cazuela de patatas con costilla">
                     </div>
                 </div>
-                <!-- <div class="controls">
-                    <button id="prev">←</button>
-                    <button id="next">→</button>
-                </div> -->
+                
+                <!-- Miniaturas -->
+                <div class="thumbs-container">
+                    <img class="thumb" data-index="0" src="../images/cazuela-costilla.jpg" alt="Cazuela de patatas con costilla">
+                    <img class="thumb" data-index="1" src="../images/cazuela-patatas-costilla/cazuela-patatas-costilla-1.jpg" alt="Cazuela de patatas con costilla">
+                    <img class="thumb" data-index="2" src="../images/cazuela-patatas-costilla/cazuela-patatas-costilla-4.jpg" alt="Cazuela de patatas con costilla">
+                    <img class="thumb" data-index="3" src="../images/cazuela-patatas-costilla/cazuela-patatas-costilla-5.jpg" alt="Cazuela de patatas con costilla">
+                    <img class="thumb" data-index="4" src="../images/cazuela-patatas-costilla/cazuela-patatas-costilla-6.jpg" alt="Cazuela de patatas con costilla">
+                    <img class="thumb" data-index="5" src="../images/cazuela-patatas-costilla/cazuela-patatas-costilla-8.jpg" alt="Cazuela de patatas con costilla">
+                    <img class="thumb" data-index="6" src="../images/cazuela-patatas-costilla/cazuela-patatas-costilla-9.jpg" alt="Cazuela de patatas con costilla">
+                    <img class="thumb" data-index="7" src="../images/cazuela-patatas-costilla/cazuela-patatas-costilla-10.jpg" alt="Cazuela de patatas con costilla">
+                    <img class="thumb" data-index="8" src="../images/cazuela-patatas-costilla/cazuela-patatas-costilla-12.jpg" alt="Cazuela de patatas con costilla">
+                    <img class="thumb" data-index="9" src="../images/cazuela-patatas-costilla/cazuela-patatas-costilla-13.jpg" alt="Cazuela de patatas con costilla">
+                    <img class="thumb" data-index="10" src="../images/cazuela-patatas-costilla/cazuela-patatas-costilla-17.jpg" alt="Cazuela de patatas con costilla">
+                    <img class="thumb" data-index="11" src="../images/cazuela-patatas-costilla/cazuela-patatas-costilla-18.jpg" alt="Cazuela de patatas con costilla">
+                </div>
 
 
                 <h3>Descripción</h3>
