--- a/misRecetas/cazuela-pollo.html
+++ b/misRecetas/cazuela-pollo.html
@@ -44,6 +44,11 @@
                     </div>
                 </div>
 
+                <!-- Miniaturas -->
+                <div class="thumbs-container">
+                    <img class="thumb" data-index="0" src="../images/cazuela-pollo.png" alt="Cazuela de patatas con pollo">
+                </div>
+
                 <h3>Descripción</h3>
                 <p>Esta cazuela de patatas con pollo es un plato completo, sabroso y nutritivo.</p>
                 <p>El pollo aporta proteínas magras de alta calidad, mientras que las patatas y zanahorias ofrecen energía, fibra y vitaminas como la A, B6 y C.</p>
