--- a/misRecetas/emblanco.html
+++ b/misRecetas/emblanco.html
@@ -46,10 +46,15 @@
                         <img src="../images/emblanco/emblanco4.jpg" alt="En blanco">
                     </div>
                 </div>
-                <!-- <div class="controls">
-                    <button id="prev">←</button>
-                    <button id="next">→</button>
-                </div> -->
+                
+                <!-- Miniaturas -->
+                <div class="thumbs-container">
+                    <img class="thumb" data-index="0" src="../images/emblanco.jpg" alt="En blanco">
+                    <img class="thumb" data-index="1" src="../images/emblanco/emblanco1.jpg" alt="En blanco">
+                    <img class="thumb" data-index="2" src="../images/emblanco/emblanco2.jpg" alt="En blanco">
+                    <img class="thumb" data-index="3" src="../images/emblanco/emblanco3.jpg" alt="En blanco">
+                    <img class="thumb" data-index="4" src="../images/emblanco/emblanco4.jpg" alt="En blanco">
+                </div>
 
 
                 <h3>Descripción</h3>
