--- a/misRecetas/gazpachuelo.html
+++ b/misRecetas/gazpachuelo.html
@@ -94,10 +94,17 @@
                         <img src="../images/gazpachuelo/gazpachuelo9.jpg" alt="Gazpachuelo">
                     </div>
                 </div>
-                <!-- <div class="controls">
-                    <button id="prev">←</button>
-                    <button id="next">→</button>
-                </div> -->
+                
+                <!-- Miniaturas -->
+                <div class="thumbs-container">
+                    <img class="thumb" data-index="0" src="../images/gazpachuelo.png" alt="Gazpachuelo">
+                    <img class="thumb" data-index="1" src="../images/gazpachuelo/gazpachuelo-varias.jpg" alt="Gazpachuelo">
+                    <img class="thumb" data-index="2" src="../images/gazpachuelo/gazpachuelo5.jpg" alt="Gazpachuelo">
+                    <img class="thumb" data-index="3" src="../images/gazpachuelo/gazpachuelo6.jpg" alt="Gazpachuelo">
+                    <img class="thumb" data-index="4" src="../images/gazpachuelo/gazpachuelo7.jpg" alt="Gazpachuelo">
+                    <img class="thumb" data-index="5" src="../images/gazpachuelo/gazpachuelo8.jpg" alt="Gazpachuelo">
+                    <img class="thumb" data-index="6" src="../images/gazpachuelo/gazpachuelo9.jpg" alt="Gazpachuelo">
+                </div>
 
                 <h3>Descripción</h3>
                 <p>El gazpachuelo es una de las recetas más tradicionales de Málaga. Existen muchas versiones, todas con un magnífico sabor, suavidad y cremosidad.</p>
