--- a/misRecetas/lentejas.html
+++ b/misRecetas/lentejas.html
@@ -46,10 +46,15 @@
                         <img src="../images/lentejas/lentejas5.jpg" alt="Lentejas">
                     </div>
                 </div>
-                <!-- <div class="controls">
-                    <button id="prev">←</button>
-                    <button id="next">→</button>
-                </div> -->
+                
+                <!-- Miniaturas -->
+                <div class="thumbs-container">
+                    <img class="thumb" data-index="0" src="../images/lentejas.jpg" alt="Lentejas">
+                    <img class="thumb" data-index="1" src="../images/lentejas/lentejas2.jpg" alt="Lentejas">
+                    <img class="thumb" data-index="2" src="../images/lentejas/lentejas3.jpg" alt="Lentejas">
+                    <img class="thumb" data-index="3" src="../images/lentejas/lentejas4.jpg" alt="Lentejas">
+                    <img class="thumb" data-index="4" src="../images/lentejas/lentejas5.jpg" alt="Lentejas">
+                </div>
 
                 <h3>Descripción</h3>
                 <p>Las lentejas son una excelente fuente de nutrientes esenciales. 
