--- a/misRecetas/pure-verduras.html
+++ b/misRecetas/pure-verduras.html
@@ -47,10 +47,16 @@
                         <img src="../images/pure-verduras/pure6.jpg" alt="Puré de verduras">
                     </div>
                 </div>
-                <!-- <div class="controls">
-                    <button id="prev">←</button>
-                    <button id="next">→</button>
-                </div> -->
+                
+                <!-- Miniaturas -->
+                <div class="thumbs-container">
+                    <img class="thumb" data-index="0" src="../images/pure1.jpg" alt="Puré de verduras">
+                    <img class="thumb" data-index="1" src="../images/pure-verduras/pure2.jpg" alt="Puré de verduras">
+                    <img class="thumb" data-index="2" src="../images/pure-verduras/pure3.jpg" alt="Puré de verduras">
+                    <img class="thumb" data-index="3" src="../images/pure-verduras/pure4.jpg" alt="Puré de verduras">
+                    <img class="thumb" data-index="4" src="../images/pure-verduras/pure5.jpg" alt="Puré de verduras">
+                    <img class="thumb" data-index="5" src="../images/pure-verduras/pure6.jpg" alt="Puré de verduras">
+                </div>
 
                 <h3>Descripción</h3>
                 <p>Las verduras se convierten en una interesante fuente de vitaminas y nutrientes. Es por ello por lo que su consumo supone un refuerzo para el sistema inmunológico.</p>
