--- a/misRecetas/sopa_caldo_encima.html
+++ b/misRecetas/sopa_caldo_encima.html
@@ -100,10 +100,20 @@
                         <img src="../images/sopa-caldo-encima/sopa-caldo-encima7.jpg" alt="Sopa caldo por encima">
                     </div>
                 </div>
-                <!-- <div class="controls">
-                    <button id="prev">←</button>
-                    <button id="next">→</button>
-                </div> -->
+                
+                <!-- Miniaturas -->
+                <div class="thumbs-container">
+                    <img class="thumb" data-index="0" src="../images/sopa_caldo_encima.jpg" alt="Sopa caldo por encima">
+                    <img class="thumb" data-index="1" src="../images/sopa-caldo-encima/sopa-caldo-encima1.png" alt="Sopa caldo por encima">
+                    <img class="thumb" data-index="2" src="../images/sopa-caldo-encima/sopa-caldo-encima2.png" alt="Sopa caldo por encima">
+                    <img class="thumb" data-index="3" src="../images/sopa-caldo-encima/sopa-caldo-encima3.png" alt="Sopa caldo por encima">
+                    <img class="thumb" data-index="4" src="../images/sopa-caldo-encima/sopa-caldo-encima4.png" alt="Sopa caldo por encima">
+                    <img class="thumb" data-index="5" src="../images/sopa-caldo-encima/sopa-caldo-encima5.png" alt="Sopa caldo por encima">
+                    <img class="thumb" data-index="6" src="../images/sopa-caldo-encima/sopa-caldo-encima6.jpg" alt="Sopa caldo por encima">
+                    <img class="thumb" data-index="7" src="../images/sopa-caldo-encima/sopa-caldo-encima8.jpg" alt="Sopa caldo por encima">
+                    <img class="thumb" data-index="8" src="../images/sopa-caldo-encima/sopa-caldo-encima9.jpg" alt="Sopa caldo por encima">
+                    <img class="thumb" data-index="9" src="../images/sopa-caldo-encima/sopa-caldo-encima7.jpg" alt="Sopa caldo por encima">
+                </div>
 
                 <h3>Descripción</h3>
                 <p>Es un plato tradicional de la provincia de Málaga que tiene distintas variantes y reciben distintos nombres según el pueblo donde se haga.
