--- a/misRecetas/cazuela-fideos.html
+++ b/misRecetas/cazuela-fideos.html
@@ -44,6 +44,11 @@
                     </div>
                 </div>
 
+                <!-- Miniaturas -->
+                <div class="thumbs-container">
+                    <img class="thumb" data-index="0" src="../images/cazuela-fideos.jpg" alt="Cazuela de fideos">
+                </div>
+
 
                 <h3>Descripción</h3>
                 <p>La cazuela de fideos es uno de los tipos de cazuela de la cocina tradicional malagueña, muy típico en zonas del Guadalhorce de Pizarra y Coín.</p>
