--- a/misRecetas/habichuelas.html
+++ b/misRecetas/habichuelas.html
@@ -47,10 +47,15 @@
                         <img src="../images/habichuelas/habichuelas4.jpg" alt="Fabada o habichuelas">
                     </div>
                 </div>
-                <!-- <div class="controls">
-                    <button id="prev">←</button>
-                    <button id="next">→</button>
-                </div> -->
+                
+                <!-- Miniaturas -->
+                <div class="thumbs-container">
+                    <img class="thumb" data-index="0" src="../images/habichuelas-fabada.png" alt="Fabada o habichuelas">
+                    <img class="thumb" data-index="1" src="../images/habichuelas/habichuelas1.jpg" alt="Fabada o habichuelas">
+                    <img class="thumb" data-index="2" src="../images/habichuelas/habichuelas2.jpg" alt="Fabada o habichuelas">
+                    <img class="thumb" data-index="3" src="../images/habichuelas/habichuelas3.jpg" alt="Fabada o habichuelas">
+                    <img class="thumb" data-index="4" src="../images/habichuelas/habichuelas4.jpg" alt="Fabada o habichuelas">
+                </div>
 
                 <h3>Descripción</h3>
                 <p>
