--- a/misRecetas/magro-tomates.html
+++ b/misRecetas/magro-tomates.html
@@ -51,10 +51,20 @@
                         <img src="../images/magro-tomates/magro-tomates9.jpg" alt="Magro con tomates">
                     </div>
                 </div>
-                <!-- <div class="controls">
-                    <button id="prev">←</button>
-                    <button id="next">→</button>
-                </div> -->
+                
+                <!-- Miniaturas -->
+                <div class="thumbs-container">
+                    <img class="thumb" data-index="0" src="../images/magro-tomates.jpg" alt="Magro con tomates">
+                    <img class="thumb" data-index="1" src="../images/magro-tomates/magro-tomates1.jpg" alt="Magro con tomates">
+                    <img class="thumb" data-index="2" src="../images/magro-tomates/magro-tomates2.jpg" alt="Magro con tomates">
+                    <img class="thumb" data-index="3" src="../images/magro-tomates/magro-tomates3.jpg" alt="Magro con tomates">
+                    <img class="thumb" data-index="4" src="../images/magro-tomates/magro-tomates4.jpg" alt="Magro con tomates">
+                    <img class="thumb" data-index="5" src="../images/magro-tomates/magro-tomates5.jpg" alt="Magro con tomates">
+                    <img class="thumb" data-index="6" src="../images/magro-tomates/magro-tomates6.jpg" alt="Magro con tomates">
+                    <img class="thumb" data-index="7" src="../images/magro-tomates/magro-tomates7.jpg" alt="Magro con tomates">
+                    <img class="thumb" data-index="8" src="../images/magro-tomates/magro-tomates8.jpg" alt="Magro con tomates">
+                    <img class="thumb" data-index="9" src="../images/magro-tomates/magro-tomates9.jpg" alt="Magro con tomates">
+                </div>
 
                 <h3>Descripción</h3>
                 <p>
